--- a/Aviation Dictionary (HTML, CSS, JS)/styles.css
+++ b/Aviation Dictionary (HTML, CSS, JS)/styles.css
@@ -3,7 +3,10 @@
 /* GENERAL */
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 /* HEADER CONTENT */
@@ -23,22 +26,24 @@ nav {
     background-color: gray;
 }
 
-nav ul {
+.topnav {
     display: flex;
     justify-content: space-evenly;
     align-content: center;
 }
 
-nav li {
-    list-style-type: none;
+.topnav a {
     background-color: black;
-    padding: 10px;
     border: 2px solid white;
+    padding: 10px;
+    color: white;
 }
 
-nav a {
-    text-decoration: none;
-    color: white;
+.topnav a:hover {
+    background-color: white;
+    border: 2px solid black;
+    box-shadow: 5px 5px 5px white;
+    color: black;
 }
 
 /* MAIN BODY */
@@ -68,7 +73,7 @@ footer {
 
 /* ------- HOME PAGE ------- */
 
-#home-page-img {
+.top-page-img {
     width: 30%;
     display: inline-block;
     float: right;
@@ -81,5 +86,30 @@ footer {
         width: 80%;
         display: inline-block;
         margin: 20px;
+    }
+
+    p {
+        width: 80%;
+        display: inline-block;
+    }
+}
+
+
+
+/* RESPONSIVES */
+
+@media (max-width: 600px) {
+    
+    .topnav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .topnav a {
+        width: 95%;
+        padding: 10px 0px 10px 0px;
+        margin: 0;
+        text-align: center;
     }
 }
